# ig2tg

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt  user_list.txt
.github/workflows/: release.yml
ig2tg/: main.py  stories.py  tg.py  utils.py
scripts/: main.py  stories.py  tg.py  utils.py
